--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -38,7 +38,9 @@
     min-height: 20vh;
     padding: 15px 0;
   }
-
+  .marginBottom-5 {
+    margin-bottom: -5px;
+  }
   .footer_text {
     font-size: calc(1rem * 0.8);
   }
