--- a/src/assets/scss/admin.scss
+++ b/src/assets/scss/admin.scss
@@ -1055,7 +1055,7 @@
 		float: right;
 	}
 	.el-tooltip {
-		margin-right: 5px;
+		margin-left: 5px;
 	}
 	.el-dialog__header {
 		padding: 10px !important;
