--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -14,7 +14,7 @@
   }
   .card-title {
     color: #082346;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: bold;
     line-height: 20px;
   }
@@ -46,6 +46,9 @@
   }
   .marginBottom-5 {
     margin-bottom: -5px;
+  }
+  .marginBottom-10 {
+    margin-bottom: -10px;
   }
   .footer_text {
     font-size: calc(1rem * 0.8);
@@ -1407,7 +1410,7 @@
     position: -webkit-sticky;
     position: sticky;
     top: 1%;
-    width: 400px;
+    width: 350px;
     max-height: 98vh;
     overflow-y: scroll;
     height: auto !important;
@@ -1429,14 +1432,7 @@
     color: black;
   }
   .posp-khso {
-    text-align: justify;
-    line-height: 1.6rem;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    max-height: 8rem;
-    font-size: calc(1rem * 0.9);
+
   }
 
   .chio-kh-khso {
@@ -1560,7 +1556,7 @@
   }
 
   .side-right-khoa-hoc {
-    padding: 0 0 0 50px;
+    padding: 0 0 0 30px;
     width: 100%;
   }
 
@@ -1739,7 +1735,7 @@
     // margin-left: 8px;
     display: flex;
     padding: 2px 8px;
-    min-width: 302px;
+    min-width: 274px;
     transition: 2s;
     cursor: pointer;
     align-items: center;
@@ -1787,7 +1783,7 @@
   .img-kh-cls {
     width: 100%;
     object-fit: cover;
-    height: 190px;
+    height: 100%;
     transition: 0.5s;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
@@ -1810,10 +1806,9 @@
   }
 
   .gia-tien-kh-l {
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: rgba(255, 0, 0, 0.807);
     font-weight: bold;
-    text-align: end;
   }
 
   .gia-tien-giam-gias {
@@ -2305,10 +2300,33 @@
     font-size: calc(1.1rem);
     font-weight: bold;
   }
+  .rstm-tree-item {
+    font-size: 1.1rem !important;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    padding-right: 0px;
+  }
+  .rstm-tree-item-level0 {
+    padding-left: 0px !important;
+  }
+  .rstm-tree-item-level1 {
+    padding-left: 10px !important;
+  }
+  .rstm-tree-item-level2 {
+    padding-left: 20px !important;
+  }
+  .rstm-tree-item-level3 {
+    padding-left: 30px !important;
+  }
+  .rstm-tree-item-level4 {
+    padding-left: 40px !important;
+  }
   .rstm-tree-item--active {
-    background-color: unset;
-    color: black;
-    box-shadow: unset;
-    border-bottom: 1px solid black;
+    background-color: #dc3545;
+  }
+  .rstm-toggle-icon-symbol {
+    font-size: 1.1rem;
+    font-weight: bold;
+
   }
 }
