--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -2337,4 +2337,20 @@
     font-size: 1.1rem;
     font-weight: bold;
   }
+
+  .pagi-kh-os ul li:first-child a {
+    text-decoration: none;
+    color: #000;
+  }
+
+  .pagi-kh-os a {
+    font-weight: bold;
+    padding: 8px 16px;
+    font-size: 1.3rem;
+  }
+
+  .pagi-kh-os ul li:last-child a {
+    text-decoration: none;
+    color: #000;
+  }
 }
