--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -2362,6 +2362,7 @@
 
   .pagi-kh-os li {
     padding: 8px 16px;
+    font-size: 1.1rem;
   }
   .pagi-kh-os ul {
     padding: 12px 0;
@@ -2374,7 +2375,7 @@
 
   .pagi-kh-os ul .selected {
     color: white;
-    background-color: #58bcec;
+    background-color: rgb(232, 82, 82);
     border-radius: 4px;
     box-shadow: rgb(67, 60, 60) 0px 1px 2px 0px,
       rgba(67, 60, 60, 0.15) 0px 1px 3px 1px;
