--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1792,6 +1792,7 @@
   .img-kh-cls {
     width: 100%;
     padding: 10px;
+    padding-right: 0px;
     object-fit: cover;
     height: 100%;
     transition: 0.5s;
