--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -2454,4 +2454,12 @@
       padding: 5px 25px;
     }
   }
+  .title-khoahoc-thu {
+    background-color: #1c1d1f;
+    color: #fff;
+    padding: 10px;
+    p {
+      font-size: 2rem;
+    }
+  }
 }
