--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -1732,8 +1732,11 @@
     height: 130px;
   }
   .form-check-input {
-    font-size: 20px;
-    margin-top: 60px;
+    font-size: 25px;
+    margin-top: 50px;
+  }
+  .gio-hang-mg-top {
+    margin-top: 35px;
   }
   .khoa-hoc-header {
     margin-bottom: 16px;
