--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -2577,5 +2577,97 @@
     font-size: calc(0.8rem) !important;
     margin-top: 5px !important;
   }
+
+  .container-canhan{
+    padding: 30px 0;
+  }
+
+  .li-canhan{
+    background-color: white;
+    padding: 16px 20px;
+    border: 1px solid #eeeeee;
+    list-style-type: none;
+    font-size: 1.1rem;
+    cursor: pointer;
+    color: #afb3ba;
+  }
+
+  .li-canhan:hover{
+    color: gray;
+  }
+
+  .li-canhan-active{
+    color: black;
+  }
+
+  .li-canhan-active:hover{
+    color: black;
+  }
+
+  .li-canhan:first-child{
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+  }
+
+  .btn-avatar-canhan:hover{
+    box-shadow: rgba(214, 3, 3, 0.3) 0px 0px 0px 3px;
+    border: none;
+  }
+
+  .right-text-canhan{
+    margin-left: 16px;
+  }
+
+  .split-2-aba{
+    border: 1px solid gainsboro;
+    height: 70px;
+    width: 1px;
+    margin-left: 16px;
+  }
+
+  .split-2-abaa{
+    border: 1px solid gainsboro;
+    height: 100px;
+    width: 0.1px;
+    margin-left: 16px;
+  }
+  .child-img-canhan{
+    border-radius: 50%;
+  }
+
+  .img-canhan{
+    margin-top: 16px;
+    padding: 0.3%;
+    border-radius: 50%;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  }
+
+  .btn-avatar-canhan{
+    margin-left: 16px;
+    height: 40px;
+    border: 1px solid gainsboro;
+    font-weight: 500;
+    color: rgba(190, 14, 14, 0.712);
+    border-radius: 8px;
+    width: 150px;
+    background-color: white;
+
+  }
+
+  .split-avat{
+    border: 1px solid gainsboro;
+  }
+
+  .tai-khoan-ca-nhan{
+    background-color: white;
+    border-radius: 8px;
+    padding: 16px 16px;
+    width: 100%;
+  }
+
+  .li-canhan:last-child{
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
 }
 
