--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -2331,9 +2331,9 @@
     margin: 0 !important;
   }
 
-  .change-tt-aba {
-    width: 17.3rem;
-  }
+  // .change-tt-aba {
+  //   width: 17.3rem;
+  // }
 
   .tieu-de-ava {
     text-align: unset !important;
