--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -415,7 +415,7 @@
     }
   }
   .bido-search-aus{
-    flex-grow: 1;
+    // flex-grow: 1;
   }
   @media screen and (min-width: 769px) and (max-width: 1150px) {
     .la{
