--- a/src/assets/scss/portal.scss
+++ b/src/assets/scss/portal.scss
@@ -433,7 +433,9 @@
     }
   }
   .bido-search-aus{
+    padding: 0 8px;
     // flex-grow: 1;
+    min-width: 100px;
   }
   @media screen and (min-width: 769px) and (max-width: 1150px) {
     .la{
@@ -739,17 +741,16 @@
   // end gioi thieu
   .teat {
     height: 70px;
-
-    line-height: 1.6rem;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    max-height: 3.2rem;
+    max-height: 3.5rem;
   }
 
   .img-fluid {
     height: 100% !important;
+    aspect-ratio: 3/2;
   }
 
   @media screen and (max-width: 768px) {
@@ -791,8 +792,9 @@
   }
 
   .unDoContent {
-    opacity: 0.7;
     cursor: pointer;
+    opacity: 0.7;
+    padding:5px;
   }
 .editor-content{
   padding: 10px;
@@ -1483,16 +1485,17 @@
     height: 100%;
   }
 
-  .wrapper_c:hover img {
+  .wrapper_card:hover img {
     -ms-transform: scale(1.5);
     -webkit-transform: scale(1.5);
     transform: scale(1.5);
   }
 
-  .wrapper_d:hover .imov {
+  .wrapper_discard:hover .imov {
     -ms-transform: scale(1.5);
     -webkit-transform: scale(1.5);
     transform: scale(1.5);
+    
   }
 
   .rout-kba-dun {
@@ -2075,14 +2078,16 @@
   .mob-kh-btn {
     border: 4px;
     display: inline-block;
-    margin-top: 8px;
-    margin-left: 8px;
     color: black;
     text-decoration: none;
     padding: 2px 8px;
     box-shadow: rgb(24 19 19 / 19%) 0px 0px 0px 2px;
     margin-bottom: 8px;
     font-size: 1.5rem;
+  }
+
+  .if-gt-a-ab{
+    aspect-ratio: 16/9;
   }
 
   .kt-contain-head {
@@ -2605,8 +2610,11 @@
     padding: 5px 8px;
     box-shadow: rgba(214, 3, 3, 0.3) 0px 0px 0px 2px;
     border-radius: 8px;
+    display: flex;
   }
   .inp-uej {
+    width: 100%;
+    flex-grow: 1;
     border: none;
     outline: none;
     margin-left: 8px;
@@ -2635,6 +2643,20 @@
       font-size: 14px;
       margin-left: 5px;
     }
+  }
+
+  // .ttt-aba-aa{
+  //   padding: 0 15px;
+  // }
+    .didu-zx-a{
+      aspect-ratio: 16/9;
+    }
+  .change4{
+    padding: 16px 16px;
+    background-color: white;
+    border-radius: 8px;
+    text-align: center;
+    margin-bottom: 8px;
   }
   .checkbox-check {
     font-size: calc(0.8rem) !important;
